// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Notification/ino-popover AttachToBody smoke-test 1`] = `
<div id="root-inner">
  <div class="story-ino-popover">
    <ino-button id="popover-3"
                class="hydrated"
    >
      <button class="button button__variant--filled"
              type="button"
      >
        <span class="button__label">
          Popover
        </span>
      </button>
    </ino-button>
    <ino-popover color-scheme="transparent"
                 controlled="false"
                 distance="10"
                 for="popover-3"
                 interactive="false"
                 followcursor="undefined"
                 placement="top"
                 trigger="mouseenter focus"
                 visible="false"
                 hide-on-blur="false"
                 hide-on-esc="false"
                 class="hydrated"
    >
      <div>
      </div>
    </ino-popover>
  </div>
</div>
`;

exports[`Notification/ino-popover ColorScheme smoke-test 1`] = `
<div id="root-inner">
  <div class="story-ino-popover">
    <ino-button id="popover-5"
                class="hydrated"
    >
      <button class="button button__variant--filled"
              type="button"
      >
        <span class="button__label">
          Popover
        </span>
      </button>
    </ino-button>
    <ino-popover color-scheme="secondary"
                 controlled="false"
                 distance="10"
                 for="popover-5"
                 interactive="false"
                 followcursor="undefined"
                 placement="top"
                 trigger="mouseenter focus"
                 visible="false"
                 hide-on-blur="false"
                 hide-on-esc="false"
                 class="hydrated"
    >
      <div>
      </div>
    </ino-popover>
  </div>
</div>
`;

exports[`Notification/ino-popover Distance smoke-test 1`] = `
<div id="root-inner">
  <div class="story-ino-popover">
    <ino-button id="popover-4"
                class="hydrated"
    >
      <button class="button button__variant--filled"
              type="button"
      >
        <span class="button__label">
          Popover
        </span>
      </button>
    </ino-button>
    <ino-popover color-scheme="transparent"
                 controlled="false"
                 distance="30"
                 for="popover-4"
                 interactive="false"
                 followcursor="undefined"
                 placement="top"
                 trigger="mouseenter focus"
                 visible="false"
                 hide-on-blur="false"
                 hide-on-esc="false"
                 class="hydrated"
    >
      <div>
      </div>
    </ino-popover>
  </div>
</div>
`;

exports[`Notification/ino-popover FollowCursor smoke-test 1`] = `
<div id="root-inner">
  <div class="story-ino-popover">
    <ino-button id="popover-7"
                class="hydrated"
    >
      <button class="button button__variant--filled"
              type="button"
      >
        <span class="button__label">
          Popover
        </span>
      </button>
    </ino-button>
    <ino-popover color-scheme="transparent"
                 controlled="false"
                 distance="10"
                 for="popover-7"
                 interactive="false"
                 followcursor="horizontal"
                 placement="top"
                 trigger="mouseenter focus"
                 visible="false"
                 hide-on-blur="false"
                 hide-on-esc="false"
                 class="hydrated"
    >
      <div>
      </div>
    </ino-popover>
  </div>
</div>
`;

exports[`Notification/ino-popover Interactions smoke-test 1`] = `
<div id="root-inner">
  <div class="story-ino-popover">
    <ino-popover trigger="click"
                 for="popover-interactive-target"
                 color-scheme="transparent"
                 interactive
                 placement="left"
                 class="hydrated"
    >
      <div>
      </div>
    </ino-popover>
    <ino-button class="placement-button hydrated"
                id="popover-interactive-target"
                aria-expanded="false"
    >
      <button class="button button__variant--filled"
              type="button"
      >
        <span class="button__label">
          Interactive Content
        </span>
      </button>
    </ino-button>
  </div>
</div>
`;

exports[`Notification/ino-popover Placement smoke-test 1`] = `
<div id="root-inner">
  <div class="story-ino-popover">
    <ino-button id="popover-2"
                class="hydrated"
    >
      <button class="button button__variant--filled"
              type="button"
      >
        <span class="button__label">
          Popover
        </span>
      </button>
    </ino-button>
    <ino-popover color-scheme="transparent"
                 controlled="false"
                 distance="10"
                 for="popover-2"
                 interactive="false"
                 followcursor="undefined"
                 placement="right"
                 trigger="mouseenter focus"
                 visible="false"
                 hide-on-blur="false"
                 hide-on-esc="false"
                 class="hydrated"
    >
      <div>
      </div>
    </ino-popover>
  </div>
</div>
`;

exports[`Notification/ino-popover Playground smoke-test 1`] = `
<div id="root-inner">
  <div class="story-ino-popover">
    <ino-button id="popover-1"
                class="hydrated"
    >
      <button class="button button__variant--filled"
              type="button"
      >
        <span class="button__label">
          Popover
        </span>
      </button>
    </ino-button>
    <ino-popover color-scheme="transparent"
                 controlled="false"
                 distance="10"
                 for="popover-1"
                 interactive="false"
                 followcursor="undefined"
                 placement="top"
                 trigger="mouseenter focus"
                 visible="false"
                 hide-on-blur="false"
                 hide-on-esc="false"
                 class="hydrated"
    >
      <div>
      </div>
    </ino-popover>
  </div>
</div>
`;

exports[`Notification/ino-popover Trigger smoke-test 1`] = `
<div id="root-inner">
  <div class="story-ino-popover">
    <ino-button id="popover-6"
                class="hydrated"
    >
      <button class="button button__variant--filled"
              type="button"
      >
        <span class="button__label">
          Popover
        </span>
      </button>
    </ino-button>
    <ino-popover color-scheme="transparent"
                 controlled="false"
                 distance="10"
                 for="popover-6"
                 interactive="false"
                 followcursor="undefined"
                 placement="top"
                 trigger="click"
                 visible="false"
                 hide-on-blur="false"
                 hide-on-esc="false"
                 class="hydrated"
    >
      <div>
      </div>
    </ino-popover>
  </div>
</div>
`;

exports[`Notification/ino-popover Visible smoke-test 1`] = `
<div id="root-inner">
  <div class="story-ino-popover">
    <ino-popover id="controlled-popover"
                 placement="left"
                 controlled="true"
                 trigger="click"
                 visible="false"
    >
      <ino-checkbox id="controlled-checkbox"
                    slot="popover-trigger"
      >
        Uncheck to hide / check to show
      </ino-checkbox>
      <div>
        <div class="ino-popover ino-popover--color-scheme-primary ino-popover__content"
             role="tooltip"
        >
          <div class="popover-content">
            I'm a controlled popover
          </div>
        </div>
      </div>
    </ino-popover>
  </div>
</div>
`;
